fix: adjust loading spinner layout for better alignment

--- a/src/app/components/elements-table/elements-table.scss
+++ b/src/app/components/elements-table/elements-table.scss
@@ -8,6 +8,7 @@ table {
 
 .loading-spinner {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100px;
